--- a/1.css
+++ b/1.css
@@ -27,7 +27,7 @@ body
 
 .container
 {
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--background);
     margin: 0px;
     box-sizing: border-box;
@@ -116,10 +116,18 @@ h3
     margin-left: 15vw;
 }
 
+.section
+{
+    margin-top: 10vh;
+    margin-bottom:20vh;
+    max-width: 50vw;
+    margin-left: 15vw;
+}
+
 .project-card
 {
-    margin-top: 20px;
-    margin-bottom: 30px;
+    margin-top: 50px;
+    margin-bottom: 70px;
 }
 
 
