--- a/1.css
+++ b/1.css
@@ -7,6 +7,7 @@
     --button: var(--background);
     --scrollbar: var(--blue);
     --selection: var(--blue);
+    --paragraph: black;
 }
 
 html
@@ -19,7 +20,7 @@ body
     padding: 0px;
     margin: 0px;
     background-color: var(--background);
-    color: #000000;
+    color: var(--paragraph);
 
     font-family: 'Inconsolata', monospace;
     box-sizing: border-box;
@@ -128,6 +129,16 @@ h3
 {
     margin-top: 50px;
     margin-bottom: 70px;
+}
+
+
+
+.unselectable {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 
