--- a/1.css
+++ b/1.css
@@ -8,6 +8,9 @@
     --scrollbar: var(--blue);
     --selection: var(--blue);
     --paragraph: black;
+
+    --inner-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
+    --drop-shadow: -5px -5px 5px #FFFFFF, 5px 5px 15px #A8B1D6;
 }
 
 html
@@ -39,6 +42,11 @@ body
     min-height: 20px;
 }
 
+.sample
+{
+    box-shadow: var(--drop-shadow);
+}
+
 a
 {
     width:fit-content;
@@ -46,9 +54,9 @@ a
     border: none;
     border-radius: 50px;
     background: var(--button);
-    box-shadow: -5px -5px 5px #FFFFFF, 5px 5px 15px #A8B1D6;
-    margin-top: 20px;
+    box-shadow: var(--drop-shadow);
     margin-right: 20px;
+    margin-bottom: 20px;
     white-space: nowrap;
 
     font-family: 'Inconsolata', monospace;
@@ -57,29 +65,40 @@ a
     text-decoration: none;
     cursor: pointer;
     outline: none;
+    transition: 1s;
+    color: var(--pink);
 }
 
 a:hover
 {
-    font-style: italic;
+    transition: 0.25s;
+    box-shadow: none;
 }
 
-a:active {
-    box-shadow: none;
-    box-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
+a:active
+{
+    box-shadow: var(--inner-shadow);
     transform: translateY(2px);
     text-decoration: underline;
 }
 
-.navigation
+.square
 {
-    margin-top: 10vh;
-    line-height: 75px;
+    border-radius: 10px;
+    max-height: 20px;
+    max-width: 20px;
 }
 
-#button-uiux
+.icon
 {
-    color: var(--pink);
+    height: 16px;
+    width: 16px;
+}
+
+.navigation
+{
+    margin-top: 5h;
+    line-height: 75px;
 }
 
 h1
@@ -92,7 +111,6 @@ h1
 h2
 {
     font-size: 25px;
-    text-decoration: underline;
     margin-bottom: 0px;
 }
 
@@ -119,19 +137,79 @@ h3
 
 .section
 {
-    margin-top: 10vh;
-    margin-bottom:20vh;
+    margin-top: 5vh;
+    margin-bottom:10vh;
     max-width: 50vw;
     margin-left: 15vw;
 }
 
+.project
+{
+    display: grid;
+    grid-template-columns: 35vw 35vw;
+    column-gap: 3vw;
+}
+
 .project-card
 {
-    margin-top: 50px;
+    margin-right: 30px;
+    margin-top: 40px;
     margin-bottom: 70px;
 }
 
+.image
+{
+    border-radius: 10px;
+    width: 100%;
+    max-height: 200px;
+    object-fit: cover;
+}
 
+.chip
+{
+    display: inline-block;
+    width:fit-content;
+    padding: 5px 15px 5px 15px;
+    border: none;
+    border-radius: 50px;
+    background: var(--pink);
+    margin-top: 20px;
+    margin-right: 10px;
+    white-space: nowrap;
+    color: var(--off-white);
+
+    font-family: 'Inconsolata', monospace;
+    font-size: 15px;
+    user-select: none;
+}
+
+#filters
+{
+    margin-top: 30px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-bottom: 50px;
+}
+
+#filters a
+{
+    padding: 10px 20px;
+}
+
+#filters a:active
+{
+    text-decoration: none;
+}
+
+.selected
+{
+    box-shadow: var(--inner-shadow);
+}
+
+.selected:hover
+{
+    box-shadow: var(--inner-shadow);
+}
 
 .unselectable {
     -moz-user-select: -moz-none;
@@ -155,6 +233,7 @@ h3
 /* width */
 ::-webkit-scrollbar {
     width: 7px;
+    height: 7px;
     background: #888;
 }
   
