--- a/1.css
+++ b/1.css
@@ -25,7 +25,7 @@ body
     background-color: var(--background);
     color: var(--paragraph);
 
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Source Sans Pro', sans-serif;
     box-sizing: border-box;
 }
 
@@ -42,11 +42,6 @@ body
     min-height: 20px;
 }
 
-.sample
-{
-    box-shadow: var(--drop-shadow);
-}
-
 a
 {
     width:fit-content;
@@ -59,7 +54,7 @@ a
     margin-bottom: 20px;
     white-space: nowrap;
 
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
     font-size: 18px;
     text-decoration: none;
@@ -82,14 +77,14 @@ a:active
     text-decoration: underline;
 }
 
-.square
+.square-button
 {
     border-radius: 10px;
     max-height: 20px;
     max-width: 20px;
 }
 
-.icon
+.img-icon
 {
     height: 16px;
     width: 16px;
@@ -103,7 +98,8 @@ a:active
 
 h1
 {   
-    font-size: 30px;
+    font-family: 'League Gothic', sans-serif;
+    font-size: 60px;
     color: var(--blue);
     margin: 0px;
 }
@@ -114,25 +110,11 @@ h2
     margin-bottom: 0px;
 }
 
-h3
+p
 {
     font-size: 20px;
     font-weight: normal;
     line-height: 25px;
-}
-
-
-.column
-{
-    display: grid;
-
-    max-width: 50vw;
-    max-height: 100vh;
-    background-color: transparent;
-
-    margin-top: 20vh;
-    margin-bottom: 20vh;
-    margin-left: 15vw;
 }
 
 .section
@@ -141,6 +123,37 @@ h3
     margin-bottom:10vh;
     max-width: 50vw;
     margin-left: 15vw;
+}
+
+.hero-container
+{
+    display: flex;
+    align-items: center;
+    margin-top: 25vh;
+    margin-left: 15vw;
+    margin-right: 15vw;
+}
+
+.hero-text
+{
+    min-width: 35vw;
+}
+
+.hero-image
+{
+    display:block;
+    max-width:25vw;
+    max-height:20vw;
+    object-fit: cover;
+    width: auto;
+    height: auto;
+}
+
+.hero-title
+{
+    font-family: 'League Gothic', sans-serif;
+    font-size: 8vw;
+    color: var(--blue);
 }
 
 .project
@@ -157,12 +170,43 @@ h3
     margin-bottom: 70px;
 }
 
-.image
+.project-image
 {
     border-radius: 10px;
     width: 100%;
     max-height: 200px;
     object-fit: cover;
+}
+
+.education
+{
+    background-color: var(--blue);
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+.education h1, .education h3, .education p
+{
+    color: var(--off-white);
+}
+
+.education-container
+{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-container
+{
+    margin-top: 15vh;
+    margin-bottom: 10vh;
+    max-width: 85vw;
+    margin-left:auto;
+    margin-right: auto;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .chip
@@ -178,10 +222,12 @@ h3
     white-space: nowrap;
     color: var(--off-white);
 
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 15px;
     user-select: none;
 }
+
+
 
 #filters
 {
@@ -218,6 +264,48 @@ h3
     -o-user-select: none;
     user-select: none;
 }
+
+
+@media (max-width: 479) {
+    .hero-title
+    {
+        font-size: 10vw;
+    }
+}
+
+@media (max-width: 991px){
+    .project
+    {
+        display: grid;
+        grid-template-columns: 70vw;
+        column-gap: 3vw;
+    }
+
+    .section
+    {
+        min-width: 70vw;
+    }
+
+    .education-container, .contact-container
+    {
+        flex-direction: column;
+    }
+
+    .education-container > p
+    {
+        margin-top: 5px;
+        text-align: right;
+    }
+
+    .contact-container
+    {
+        max-width: 70vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}
+
 
 
 
