--- a/styles/article.css
+++ b/styles/article.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 .large {
-  font-size: 8vw;
+  font-size: 6vw;
 }
 
 p {
@@ -50,6 +50,7 @@ p {
 
 img {
   max-width: 50vw;
+  border-radius: 10px;
 }
 
 .bluemode {
@@ -109,6 +110,9 @@ img {
 @media (max-width: 991px) {
   .tight {
     max-width: 80vw;
+  }
+  img {
+    max-width: 70vw;
   }
 }
 
