--- a/styles/article.scss
+++ b/styles/article.scss
@@ -51,7 +51,7 @@ h2
 
 .large
 {
-    font-size: 8vw;
+    font-size: 6vw;
 }
 
 p
@@ -64,6 +64,7 @@ p
 img
 {
     max-width: 50vw;
+    border-radius: 10px;
 }
 
 .bluemode
@@ -133,6 +134,11 @@ img
     .tight
     {
         max-width: 80vw;
+    }
+
+    img
+    {
+        max-width: 70vw;
     }
 }
 
