--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,39 +1,10 @@
-:root {
-    --blue:#1F4CFF;
-    --pink: #e7068a;
-    --off-white: #EBECF0;
-
-    --background: var(--off-white);
-    --button: var(--background);
-    --scrollbar: var(--blue);
-    --selection: black;
-    --paragraph: black;
-
-    --inner-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
-    --drop-shadow: -5px -5px 5px #FFFFFF, 5px 5px 15px #A8B1D6;
-}
-
-html
-{
-    scroll-behavior: smooth;
-}
-
-body
-{
-    overflow-x: hidden;
-    padding: 0px;
-    margin: 0px;
-    background-color: var(--background);
-    color: var(--paragraph);
-
-    font-family: 'Source Sans Pro', sans-serif;
-    box-sizing: border-box;
-}
+@import 'variables';
+@import 'global';
 
 .container
 {
     min-height: 100vh;
-    background-color: var(--background);
+    background-color: $background;
     margin: 0px;
     box-sizing: border-box;
 }
@@ -49,8 +20,8 @@ a
     padding: 15px 25px 15px 25px;
     border: none;
     border-radius: 50px;
-    background: var(--button);
-    box-shadow: var(--drop-shadow);
+    background: $button;
+    box-shadow: $drop-shadow;
     margin-right: 20px;
     margin-bottom: 20px;
     white-space: nowrap;
@@ -62,20 +33,20 @@ a
     cursor: pointer;
     outline: none;
     transition: 1s;
-    color: var(--pink);
-}
+    color: $pink;
 
-a:hover
-{
-    transition: 0.25s;
-    box-shadow: none;
-}
+    &:hover
+    {
+        transition: 0.25s;
+        box-shadow: none;
+    }
 
-a:active
-{
-    box-shadow: var(--inner-shadow);
-    transform: translateY(2px);
-    text-decoration: underline;
+    &:active 
+    {
+        box-shadow: $inner-shadow;
+        transform: translateY(2px);
+        text-decoration: underline;
+    }
 }
 
 .img-container {
@@ -90,11 +61,6 @@ a:active
     bottom: 0;
     left: 0;
     z-index: 99;
-}
-
-.new-tab
-{
-    cursor: url('assets/arrow-link.png'), auto;
 }
 
 .square-button
@@ -114,27 +80,6 @@ a:active
 {
     margin-top: 5h;
     line-height: 75px;
-}
-
-h1
-{   
-    font-family: 'League Gothic', sans-serif;
-    font-size: 60px;
-    color: var(--blue);
-    margin: 0px;
-}
-
-h2
-{
-    font-size: 25px;
-    margin-bottom: 0px;
-}
-
-p
-{
-    font-size: 20px;
-    font-weight: normal;
-    line-height: 25px;
 }
 
 .slide-up
@@ -189,7 +134,7 @@ p
     font-family: 'League Gothic', sans-serif;
     font-size: 8vw;
     line-height: 7vw;
-    color: var(--blue);
+    color: $blue;
 }
 
 .project
@@ -215,13 +160,12 @@ p
 .project-card-title *
 {
     margin-bottom: 0px;
-}
-
-.project-card-title > p
-{
-    font-size: 14px;
-    text-align: right;
-    line-height: 100%;
+    p 
+    {
+        font-size: 14px;
+        text-align: right;
+        line-height: 100%;
+    }
 }
 
 .project-image
@@ -234,7 +178,7 @@ p
 
 .education
 {
-    background-color: var(--blue);
+    background-color: $blue;
     padding-top: 10vh;
     padding-bottom: 10vh;
     position: relative;
@@ -243,7 +187,7 @@ p
 
 .education h1, .education h3, .education p
 {
-    color: var(--off-white);
+    color: $off-white;
 }
 
 .education-container
@@ -287,11 +231,11 @@ p
     padding: 5px 15px 5px 15px;
     border: none;
     border-radius: 50px;
-    background: var(--pink);
+    background: $pink;
     margin-top: 10px;
     margin-right: 5px;
     white-space: nowrap;
-    color: var(--off-white);
+    color: $off-white;
 
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 15px;
@@ -300,12 +244,12 @@ p
 
 .selected
 {
-    box-shadow: var(--inner-shadow);
+    box-shadow: $inner-shadow;
 }
 
 .selected:hover
 {
-    box-shadow: var(--inner-shadow);
+    box-shadow: $inner-shadow;
 }
 
 .unselectable {
@@ -373,12 +317,12 @@ p
 
 
 ::selection {
-    background: var(--selection);
-    color: var(--background);
+    background: $selection;
+    color: $background;
   }
 ::-moz-selection {
-    background: var(--selection);
-    color: var(--background);
+    background: $selection;
+    color: $background;
 }
 
 /* width */
@@ -395,7 +339,7 @@ p
   
   /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: var(--scrollbar);
+    background: $scrollbar;
     border-radius: 10px;
 }
   
