--- a/styles/article.css
+++ b/styles/article.css
@@ -1,16 +1,3 @@
-:root {
-  --blue:#1F4CFF;
-  --pink: #e7068a;
-  --off-white: #EBECF0;
-  --background: var(--off-white);
-  --button: var(--background);
-  --scrollbar: var(--blue);
-  --selection: black;
-  --paragraph: black;
-  --inner-shadow: inset -5px -5px 4px #FFFFFF, inset 3px 3px 10px #A8B1D6;
-  --drop-shadow: -5px -5px 5px #FFFFFF, 5px 5px 15px #A8B1D6;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -19,8 +6,8 @@ body {
   overflow-x: hidden;
   padding: 0px;
   margin: 0px;
-  background-color: var(--background);
-  color: var(--paragraph);
+  background-color: #EBECF0;
+  color: black;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -29,7 +16,7 @@ body {
 h1 {
   font-family: 'League Gothic', sans-serif;
   font-size: 60px;
-  color: var(--blue);
+  color: #1F4CFF;
   margin: 0px;
 }
 
@@ -38,14 +25,14 @@ h2 {
   margin-bottom: 0px;
 }
 
-.large {
-  font-size: 6vw;
-}
-
 p {
   font-size: 18px;
   font-weight: normal;
-  line-height: 32px;
+  line-height: 25px;
+}
+
+.large {
+  font-size: 6vw;
 }
 
 img {
@@ -117,18 +104,18 @@ img {
 }
 
 ::-moz-selection {
-  background: var(--selection);
-  color: var(--background);
+  background: black;
+  color: #EBECF0;
 }
 
 ::selection {
-  background: var(--selection);
-  color: var(--background);
+  background: black;
+  color: #EBECF0;
 }
 
 ::-moz-selection {
-  background: var(--selection);
-  color: var(--background);
+  background: black;
+  color: #EBECF0;
 }
 
 /* width */
@@ -145,7 +132,7 @@ img {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--scrollbar);
+  background: #1F4CFF;
   border-radius: 10px;
 }
 
