--- a/styles/article.css
+++ b/styles/article.css
@@ -30,6 +30,24 @@ p {
   font-weight: normal;
 }
 
+br {
+  display: block;
+  content: "";
+  margin-top: 0;
+}
+
+br.small {
+  min-height: 3vh;
+}
+
+br.large {
+  min-height: 10vh;
+}
+
+br.xl {
+  min-height: 35vh;
+}
+
 .slide-up {
   -webkit-transform: translateY(30%);
           transform: translateY(30%);
@@ -103,16 +121,16 @@ img {
   border-left: 1px solid #EBECF0;
 }
 
-.left-space {
+.space-s {
   margin-left: 10vw;
 }
 
-.right-space {
-  margin-left: 55vw;
+.space-m {
+  margin-left: 40vw;
 }
 
-.section-break {
-  min-height: 10vh;
+.space-l {
+  margin-left: 55vw;
 }
 
 .columns {
@@ -120,10 +138,6 @@ img {
   display: -ms-flexbox;
   display: flex;
   orientation: column;
-}
-
-.text-break {
-  min-height: 3vh;
 }
 
 .tight {
@@ -231,14 +245,17 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 50vw;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
 }
 
 .mobile-grid img {
   max-width: 100%;
+  max-height: 70vh;
   min-width: 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 @media (max-width: 991px) {
