--- a/styles/article.scss
+++ b/styles/article.scss
@@ -26,30 +26,26 @@ img
     }
 }
 
-.left-space
+.space-s
 {
     margin-left: 10vw;
 }
 
-.right-space
+.space-m
+{
+    margin-left: 40vw;
+}
+
+.space-l
 {
     margin-left: 55vw;
 }
 
-.section-break
-{
-    min-height: 10vh;
-}
 
 .columns
 {
     display: flex;
     orientation: column;
-}
-
-.text-break
-{
-    min-height: 3vh;
 }
 
 .tight 
@@ -160,14 +156,14 @@ img
 .mobile-grid
 {
     display: flex;
-    max-width: 50vw;
-    column-gap: 10px;
+    column-gap: 30px;
     
     img
     {
-        // max-width: none;
         max-width: 100%;
+        max-height: 70vh;
         min-width: 0;
+        align-self: center;
     }
 }
 
