--- a/styles/home.css
+++ b/styles/home.css
@@ -30,6 +30,24 @@ p {
   font-weight: normal;
 }
 
+br {
+  display: block;
+  content: "";
+  margin-top: 0;
+}
+
+br.small {
+  min-height: 3vh;
+}
+
+br.large {
+  min-height: 10vh;
+}
+
+br.xl {
+  min-height: 35vh;
+}
+
 .slide-up {
   -webkit-transform: translateY(30%);
           transform: translateY(30%);
@@ -216,18 +234,6 @@ a:active {
 .project-card {
   margin-right: 40px;
   margin-top: 60px;
-}
-
-.project-card-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .project-image {
