--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
 html
 {
     scroll-behavior: smooth;
