--- a/styles/article.css
+++ b/styles/article.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Gothic&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 html {
   scroll-behavior: smooth;
 }
